...
      ),
    );
  }

  Widget _crearTextFieldRiesgo() {
    return TextFormField(
      key: Key('campoDescripcionEvaluacion'),
      controller: _tituloController,
      style: TextStyle(fontSize: 18.0),
      textCapitalization: TextCapitalization.sentences,
      validator: (value) {
        if (value.length < 1) {
          return 'Ingrese una descripción para esta evaluación';
...
          labelStyle: TextStyle(fontSize: 22.0, color: Colors.pinkAccent)),
    );
  }

  Widget _crearTextFieldAccionCorrectora() {
    return TextFormField(
      key: Key('campoAccionCorrectoraEvaluacion'),
      controller: _accionCorrectoraController,
      style: TextStyle(fontSize: 18),
      textCapitalization: TextCapitalization.sentences,
      decoration: InputDecoration(
          labelText: 'Acción Correctora',
          labelStyle: TextStyle(fontSize: 22.0, color: Colors.pinkAccent)),
      validator: (value) {
        if (value.length < 1) {
          return 'Ingrese una acción correctora para esta evaluación';
        } else {
          return null;
        }
      },
    );
  }

  Widget _crearBoton() {
    return Container(
      key: Key('botonGuardarEvaluacion'),
      padding: EdgeInsets.symmetric(vertical: 10),
      child: RaisedButton.icon(
        shape:
            RoundedRectangleBorder(borderRadius: BorderRadius.circular(20.0)),
        color: Colors.deepPurple,
        textColor: Colors.white,
...
