...
          SizedBox(height: 10.0),
          Container(
            alignment: Alignment.centerLeft,
            decoration: boxDecoraccionCustom(),
            height: 60.0,
            child: TextFormField(
              key: Key("emailField"),
              controller: _emailController,
              keyboardType: TextInputType.emailAddress,
              style: TextStyle(color: Colors.white),
              decoration: InputDecoration(
                border: InputBorder.none,
                contentPadding: EdgeInsets.only(top: 14.0),
...
          SizedBox(height: 10.0),
          Container(
            alignment: Alignment.centerLeft,
            decoration: boxDecoraccionCustom(),
            height: 60.0,
            child: TextFormField(
              key: Key("passField"),
              obscureText: true,
              controller: _passwordController,
              style: TextStyle(color: Colors.white),
              decoration: InputDecoration(
                border: InputBorder.none,
                contentPadding: EdgeInsets.only(top: 14.0),
...

  Widget botonInicioSesion() {
    return Container(
      padding: EdgeInsets.symmetric(vertical: 25.0),
      width: double.infinity,
      child: RaisedButton(
          key: Key('loginButton'),
          onPressed: () async {
            if (_formKey1.currentState.validate() &&
                _formKey2.currentState.validate()) {
              iniciarSesionPassEmail();
            }
          },
...
