...
                    splashColor: Colors.blue,
                    child: Center(
                      child: Column(
                        mainAxisSize: MainAxisSize.min,
                        children: <Widget>[
                          Icon(Icons.list_alt, size: 70.0),
                          Text('Inspectores',
                              style: new TextStyle(fontSize: 22.0)),
                        ],
                      ),
                    )),
              ),
            ),
...
                  splashColor: Colors.blue,
                  child: Center(
                    child: Column(
                      mainAxisSize: MainAxisSize.min,
                      children: <Widget>[
                        Icon(Icons.list_alt, size: 80.0),
                        Text('Inspecciones',
                            style: new TextStyle(fontSize: 22.0)),
                      ],
                    ),
                  )),
            ),
          ),
...
